WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
161246
Typo fix after
r56209
https://bugs.webkit.org/show_bug.cgi?id=161246
Summary
Typo fix after r56209
Csaba Osztrogonác
Reported
2016-08-26 08:41:52 PDT
http://trac.webkit.org/changeset/56209
caused build failure with GCC 6 ( 6.5 years later :)) ) ../../Source/WebCore/page/FrameView.cpp: In member function ‘void WebCore::FrameView::adjustMediaTypeForPrinting(bool)’: ../../Source/WebCore/page/FrameView.cpp:1606:9: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation] if (m_mediaTypeWhenNotPrinting.isNull()) ^~ ../../Source/WebCore/page/FrameView.cpp:1608:13: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the ‘if’ setMediaType("print"); ^~~~~~~~~~~~ "setMediaType("print");" line was indented misleadingly, it should be fixed. Darin's comment was good in
https://bugs.webkit.org/show_bug.cgi?id=35308#c16
, but the landed patch was wrong. Let's make GCC happy. ;)
Attachments
Patch
(1.30 KB, patch)
2016-08-26 08:43 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2016-08-26 08:43:40 PDT
Created
attachment 287106
[details]
Patch
WebKit Commit Bot
Comment 2
2016-08-26 09:34:53 PDT
Comment on
attachment 287106
[details]
Patch Clearing flags on attachment: 287106 Committed
r205015
: <
http://trac.webkit.org/changeset/205015
>
WebKit Commit Bot
Comment 3
2016-08-26 09:34:57 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug