Typo fix after r56209 https://bugs.webkit.org/show_bug.cgi?id=161246

Reviewed by Gyuyoung Kim.

* page/FrameView.cpp:
(WebCore::FrameView::adjustMediaTypeForPrinting):


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@205015 268f45cc-cd09-0410-ab3c-d52691b4dbfc